--- a/sample_settings.json
+++ b/sample_settings.json
@@ -5,5 +5,6 @@
     "amount_in": 100000000,
     "slippage": 0.05,
     "threads": 1,
-    "rpc_url": "https://api.mainnet-beta.solana.com"
+    "rpc_url": "https://api.mainnet-beta.solana.com",
+    "birdeye_key": "62deef4a6b35463a9f8d3ffda3eae51d"
 }
