--- a/sample_settings.json
+++ b/sample_settings.json
@@ -1,10 +1,12 @@
 {
     "keypair": "pair.json",
     "in_token": "So11111111111111111111111111111111111111112",
+    
     "out_token": "bobaM3u8QmqZhY1HwAtnvze9DLXvkgKYk3td3t8MLva",
     "amount_in": 100000000,
     "slippage": 0.05,
+    "min_snipe_out_amount": 1500000000,
     "threads": 1,
     "rpc_url": "https://api.mainnet-beta.solana.com",
-    "birdeye_key": "62deef4a6b35463a9f8d3ffda3eae51d"
+    "birdeye_key": "xyz"
 }
